--- a/system/public/static/css/style.styl
+++ b/system/public/static/css/style.styl
@@ -29,7 +29,54 @@ body
                 position absolute
                 top: 20px
                 right: 18px
-
+        ul
+            box-sizing: border-box
+            display: block
+            list-style: none
+            margin: 0px
+            overflow: hidden
+            padding: 0px 12px
+            transition: height 0.3s ease
+            width 100%
+            li 
+                display: block
+                margin-bottom: 2px
+                width 100%
+                a
+                    display block
+                    border-radius: 4px
+                    box-sizing: border-box
+                    color var(--c3)
+                    font-size: 1.12em
+                    font-weight: 500
+                    padding: 10px 16px
+                    transition-duration: 0.2s
+                    transition-property: background-color color
+                    text-decoration: none
+                    width 100%
+                    &:hover
+                        background-color: #f5f5f5
+                    span.row-icon
+                        font-size: 0.8em
+                        margin-top: 4px
+                        float: right
+                        transition all 0.2s ease
+                a.active
+                    background-color: var(--c1)
+                    color #fff
+                    i
+                        color: #fff 
+                ul
+                    display: none
+                    background-color: #f7f8f9
+                    padding 0px
+                    li
+                        a
+                            i
+                                color: var(--c1)
+                                font-size: 0.7em
+                                position: relative
+                                top -2px
 .hide-in-desktop
     display: none
 @media screen and (max-width: 992px)
