--- a/system/public/static/css/core.styl
+++ b/system/public/static/css/core.styl
@@ -26,7 +26,10 @@
     margin-top: 24px !important  
 .mtop32
     margin-top: 32px !important
-
+.sh
+    box-shadow 0 0.25rem 1.125rem rgba(75,70,92, 0.1)
+    -webkit-box-shadow 0 0.25rem 1.125rem rgba(75,70,92, 0.1)
+    -moz-box-shadow 0 0.25rem 1.125rem rgba(75,70,92, 0.1)
 .form-control
 .form-select
     &:focus
@@ -133,6 +136,21 @@
 .hide
     display: none !important
 
+.pulse-element
+    animation pulse 0.5s infinite
+    transform-origin center
+
+@keyframes pulse{
+    0%{
+        transform scale(1);
+    }
+    50%{
+        transform scale(1.4);
+    }
+    100%{
+        transform scale(1);
+    }
+}
 @keyframes action_show{
     0% { opacity: 0}
     100% { opacity: 1}
